--- a/src/assets/sass/layout/_main.scss
+++ b/src/assets/sass/layout/_main.scss
@@ -55,7 +55,7 @@ body {
                 }
 
                 #menu-button {
-                    font-size: 20px;
+                    margin-top: 4px;
                     margin-left: 48px;
                     @include transition(color .3s);
 
