--- a/src/app/utilities/icons.component.html
+++ b/src/app/utilities/icons.component.html
@@ -11,7 +11,7 @@
 &lt;i class="pi pi-times"&gt;&lt;/i&gt;
 </app-code>
 
-	<i class="pi pi-check"></i>
+	<i class="pi pi-check" style="margin-right: .5em"></i>
 	<i class="pi pi-times"></i>
 
 	<h5>Size</h5>
