--- a/src/app/app.main.component.html
+++ b/src/app/app.main.component.html
@@ -5,7 +5,7 @@
                 'layout-menu-static-inactive': staticMenuInactive,
                 'layout-menu-overlay-active': overlayMenuActive,
                 'layout-menu-active': mobileMenuActive,
-                'p-input-filled': inputStyle === 'filled', 'p-ripple-disabled': !ripple}">
+                'p-input-filled': app.inputStyle === 'filled', 'p-ripple-disabled': !app.ripple}">
 
     <app-topbar></app-topbar>
 
