--- a/src/app/app.menu.component.html
+++ b/src/app/app.menu.component.html
@@ -1,4 +1,4 @@
-<div class="layout-menu-wrapper" [class.layout-menu-dark]="app.darkMenu" (click)="app.onMenuClick($event)">
+<div class="layout-menu-wrapper" [class.layout-menu-dark]="app.darkMenu" (click)="appMain.onMenuClick($event)">
         <div class="layout-menu-container">
             <div class="mobile-search">
                 <i class="pi pi-fw pi-search topbar-search-icon"></i>
