--- a/src/app/app.topbar.component.html
+++ b/src/app/app.topbar.component.html
@@ -7,7 +7,7 @@
                     style="border: 0 none">
             </a>
 
-            <a href="#" id="menu-button" (click)="app.onMenuButtonClick($event)">
+            <a href="#" id="menu-button" (click)="appMain.onMenuButtonClick($event)">
                 <i class="pi pi-bars"></i>
             </a>
 
@@ -18,144 +18,144 @@
         </div>
 
         <div class="topbar-right">
-            <a href="#" id="user-display" (click)="app.onTopbarMenuButtonClick($event)">
+            <a href="#" id="user-display" (click)="appMain.onTopbarMenuButtonClick($event)">
                 <span class="username">Emma Davis</span>
                 <img src="assets/layout/images/avatar.png" style="border: 0px;">
             </a>
 
-            <ul id="topbar-menu" class="fadeInDown" [ngClass]="{'topbar-menu-visible': app.topbarMenuActive}">
-                <li #profile [ngClass]="{'menuitem-active':app.activeTopbarItem === profile}">
-                    <a href="#" (click)="app.onTopbarItemClick($event, profile)">
+            <ul id="topbar-menu" class="fadeInDown" [ngClass]="{'topbar-menu-visible': appMain.topbarMenuActive}">
+                <li #profile [ngClass]="{'menuitem-active':appMain.activeTopbarItem === profile}">
+                    <a href="#" (click)="appMain.onTopbarItemClick($event, profile)">
                         <i class="topbar-icon pi pi-fw pi-user"></i>
                         <span class="topbar-item-name">Profile</span>
                     </a>
                     <ul>
                         <li role="menuitem">
-                            <a href="#" (click)="app.onTopbarSubItemClick($event)">
+                            <a href="#" (click)="appMain.onTopbarSubItemClick($event)">
                                 <i class="pi pi-fw pi-user"></i>
                                 <span>Profile</span>
                             </a>
                         </li>
                         <li role="menuitem">
-                            <a href="#" (click)="app.onTopbarSubItemClick($event)">
+                            <a href="#" (click)="appMain.onTopbarSubItemClick($event)">
                                 <i class="pi pi-fw pi-lock"></i>
                                 <span>Privacy</span>
                             </a>
                         </li>
                         <li role="menuitem">
-                            <a href="#" (click)="app.onTopbarSubItemClick($event)">
+                            <a href="#" (click)="appMain.onTopbarSubItemClick($event)">
                                 <i class="pi pi-fw pi-cog"></i>
                                 <span>Settings</span>
                             </a>
                         </li>
                         <li role="menuitem">
-                            <a href="#" (click)="app.onTopbarSubItemClick($event)">
+                            <a href="#" (click)="appMain.onTopbarSubItemClick($event)">
                                 <i class="pi pi-fw pi-sign-out"></i>
                                 <span>Logout</span>
                             </a>
                         </li>
                     </ul>
                 </li>
-                <li #settings [ngClass]="{'menuitem-active':app.activeTopbarItem === settings}">
-                    <a href="#" (click)="app.onTopbarItemClick($event, settings)">
+                <li #settings [ngClass]="{'menuitem-active':appMain.activeTopbarItem === settings}">
+                    <a href="#" (click)="appMain.onTopbarItemClick($event, settings)">
                         <i class="topbar-icon pi pi-fw pi-cog"></i>
                         <span class="topbar-item-name">Settings</span>
                     </a>
                     <ul>
                         <li role="menuitem">
-                            <a href="#" (click)="app.onTopbarSubItemClick($event)">
+                            <a href="#" (click)="appMain.onTopbarSubItemClick($event)">
                                 <i class="pi pi-fw pi-palette"></i>
                                 <span>Change Theme</span>
                                 <span class="topbar-badge">1</span>
                             </a>
                         </li>
                         <li role="menuitem">
-                            <a href="#" (click)="app.onTopbarSubItemClick($event)">
+                            <a href="#" (click)="appMain.onTopbarSubItemClick($event)">
                                 <i class="pi pi-fw pi-star"></i>
                                 <span>Favorites</span>
                             </a>
                         </li>
                         <li role="menuitem">
-                            <a href="#" (click)="app.onTopbarSubItemClick($event)">
+                            <a href="#" (click)="appMain.onTopbarSubItemClick($event)">
                                 <i class="pi pi-fw pi-lock"></i>
                                 <span>Lock Screen</span>
                                 <span class="topbar-badge">3</span>
                             </a>
                         </li>
                         <li role="menuitem">
-                            <a href="#" (click)="app.onTopbarSubItemClick($event)">
+                            <a href="#" (click)="appMain.onTopbarSubItemClick($event)">
                                 <i class="pi pi-fw pi-image"></i>
                                 <span>Wallpaper</span>
                             </a>
                         </li>
                     </ul>
                 </li>
-                <li #messages [ngClass]="{'menuitem-active':app.activeTopbarItem === messages}">
-                    <a href="#" (click)="app.onTopbarItemClick($event, messages)">
+                <li #messages [ngClass]="{'menuitem-active':appMain.activeTopbarItem === messages}">
+                    <a href="#" (click)="appMain.onTopbarItemClick($event, messages)">
                         <i class="topbar-icon material-icons animated swing pi pi-fw pi-envelope"></i>
                         <span class="topbar-item-name">Messages</span>
                         <span class="topbar-badge animated rubberBand">4</span>
                     </a>
                     <ul>
                         <li role="menuitem">
-                            <a href="#" class="topbar-message" (click)="app.onTopbarSubItemClick($event)">
+                            <a href="#" class="topbar-message" (click)="appMain.onTopbarSubItemClick($event)">
                                 <img src="assets/layout/images/avatar1.png" width="35">
                                 <span>Give me a call</span>
                             </a>
                         </li>
                         <li role="menuitem">
-                            <a href="#" class="topbar-message" (click)="app.onTopbarSubItemClick($event)">
+                            <a href="#" class="topbar-message" (click)="appMain.onTopbarSubItemClick($event)">
                                 <img src="assets/layout/images/avatar2.png" width="35">
                                 <span>Reports attached</span>
                             </a>
                         </li>
                         <li role="menuitem">
-                            <a href="#" class="topbar-message" (click)="app.onTopbarSubItemClick($event)">
+                            <a href="#" class="topbar-message" (click)="appMain.onTopbarSubItemClick($event)">
                                 <img src="assets/layout/images/avatar3.png" width="35">
                                 <span>About your invoice</span>
                             </a>
                         </li>
                         <li role="menuitem">
-                            <a href="#" class="topbar-message" (click)="app.onTopbarSubItemClick($event)">
+                            <a href="#" class="topbar-message" (click)="appMain.onTopbarSubItemClick($event)">
                                 <img src="assets/layout/images/avatar2.png" width="35">
                                 <span>Meeting today</span>
                             </a>
                         </li>
                         <li role="menuitem">
-                            <a href="#" class="topbar-message" (click)="app.onTopbarSubItemClick($event)">
+                            <a href="#" class="topbar-message" (click)="appMain.onTopbarSubItemClick($event)">
                                 <img src="assets/layout/images/avatar4.png" width="35">
                                 <span>Out of office</span>
                             </a>
                         </li>
                     </ul>
                 </li>
-                <li #notifications [ngClass]="{'menuitem-active':app.activeTopbarItem === notifications}">
-                    <a href="#" (click)="app.onTopbarItemClick($event, notifications)">
+                <li #notifications [ngClass]="{'menuitem-active':appMain.activeTopbarItem === notifications}">
+                    <a href="#" (click)="appMain.onTopbarItemClick($event, notifications)">
                         <i class="topbar-icon pi pi-fw pi-bell"></i>
                         <span class="topbar-item-name">Notifications</span>
                         <span class="topbar-badge animated rubberBand">2</span>
                     </a>
                     <ul>
                         <li role="menuitem">
-                            <a href="#" (click)="app.onTopbarSubItemClick($event)">
+                            <a href="#" (click)="appMain.onTopbarSubItemClick($event)">
                                 <i class="pi pi-fw pi-sliders-h"></i>
                                 <span>Pending tasks</span>
                             </a>
                         </li>
                         <li role="menuitem">
-                            <a href="#" (click)="app.onTopbarSubItemClick($event)">
+                            <a href="#" (click)="appMain.onTopbarSubItemClick($event)">
                                 <i class="pi pi-fw pi-calendar"></i>
                                 <span>Meeting today</span>
                             </a>
                         </li>
                         <li role="menuitem">
-                            <a href="#" (click)="app.onTopbarSubItemClick($event)">
+                            <a href="#" (click)="appMain.onTopbarSubItemClick($event)">
                                 <i class="pi pi-fw pi-download"></i>
                                 <span>Download</span>
                             </a>
                         </li>
                         <li role="menuitem">
-                            <a href="#" (click)="app.onTopbarSubItemClick($event)">
+                            <a href="#" (click)="appMain.onTopbarSubItemClick($event)">
                                 <i class="pi pi-fw pi-ticket"></i>
                                 <span>Book flight</span>
                             </a>
