--- a/src/assets/sass/layout/_main.scss
+++ b/src/assets/sass/layout/_main.scss
@@ -841,11 +841,10 @@ body {
             position: fixed;
             width: 100%;
             height: 100%;
-            background-color: #424242;
+            background-color: rgba(0,0,0,0.32);
             top: 0;
             left: 0;
             z-index: 999999997;
-            @include opacity(.9);
         }
     }
 }
