--- a/src/app/utilities/spacing.component.html
+++ b/src/app/utilities/spacing.component.html
@@ -3,7 +3,7 @@
 	<div class="p-col-12">
 		<div class="card">
 			<h4>Spacing</h4>
-			<p><a [routerLink]="['/grid']">PrimeFlex</a> provides various spacing utilities to modify
+			<p><a [routerLink]="['/utilities/grid']">PrimeFlex</a> provides various spacing utilities to modify
 				an element's layout.</p>
 
 			<h5>Classes</h5>
