--- a/src/app/demo/view/inputdemo.component.html
+++ b/src/app/demo/view/inputdemo.component.html
@@ -168,7 +168,7 @@
 			<p-toggleButton [(ngModel)]="valToggle" onLabel="Yes" offLabel="No" [style]="{'width': '10em'}"></p-toggleButton>
 
 			<h5>SelectOneButton</h5>
-			<p-selectButton [options]="paymentOptions" [(ngModel)]="valSelect1" multiple="multiple" optionLabel="name"></p-selectButton>
+			<p-selectButton [options]="paymentOptions" [(ngModel)]="valSelect1" optionLabel="name"></p-selectButton>
 
 			<h5>SelectManyButton</h5>
 			<p-selectButton [options]="paymentOptions" [(ngModel)]="valSelect2" multiple="multiple" optionLabel="name"></p-selectButton>
@@ -202,7 +202,7 @@
 				</div>
 				<div class="p-col-12 p-md-6">
 					<div class="p-inputgroup">
-						<span class="p-inputgroup-addon"><p-checkbox></p-checkbox></span>
+						<span class="p-inputgroup-addon"><p-checkbox [(ngModel)]="valCheckbox" value="checkbox"></p-checkbox></span>
 						<input type="text" pInputText placeholder="Username">
 					</div>
 				</div>
