add primary color

--- a/src/assets/sass/theme/_variables.scss
+++ b/src/assets/sass/theme/_variables.scss
@@ -8,7 +8,9 @@ $colors: (
     "teal": #009688,
     "orange": #F57C00,
     "bluegray": #607D8B,
-    "purple": #9C27B0
+    "purple": #9C27B0,
+    "primary": $primaryColor
+
 ) !default;
 
 //reused color variables
